Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ jobs:
       containerRegistry: '$(artifactRegistry)'
       repository: '$(dockerId)/$(imageName)'
       command: 'buildAndPush'
-      Dockerfile: 'DOCKERFILE-LINUX'
+      Dockerfile: 'Dockerfile'
       buildContext: '.'
       tags: |
         $(Build.BuildId)
