--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
     - job: 'CreateDockerMicroserviceReference_Linux'
       displayName: 'creates a Docker image linux'
       pool:
-        name: 'e1buildpool'
+        vmImage: 'ubuntu-latest'
       steps:
       - task: Docker@2
         displayName: 'Login to ACR'
