--- a/prometheus_kafka.yml
+++ b/prometheus_kafka.yml
@@ -3,7 +3,7 @@
 lowercaseOutputName: true
 
 rules:
-# Special cases and very specific rules
+# Special cases and specific rules
 - pattern : kafka.server<type=(.+), name=(.+), clientId=(.+), topic=(.+), partition=(.*)><>Value
   name: kafka_server_$1_$2
   type: GAUGE
