--- a/filebeat.yml
+++ b/filebeat.yml
@@ -1,31 +1,30 @@
-
-filebeat.inputs:
-
-- type: log
-  enabled: true
-  paths:
-    - /opt/kafka/logs/*.log
-  #json.keys_under_root: true
-  #json.add_error_key: true
-  #include_lines: ['^ERR', '^WARN']
-  #exclude_files: ['.gz$']
-  #fields:
-  #  level: debug
-  #  review: 1
-
-
 filebeat.config.modules:
-  path: ${path.config}/modules.d/*.yml
+  path: /etc/filebeat/modules.d/*.yml
   reload.enabled: false
 
+filebeat.inputs:
+  - type: log
+    enabled: true
+    paths:
+      - /var/log/consul/*.log
+    json.keys_under_root: true
+    json.add_error_key: true
+    json.message_key: '@message'
+
 fields:
-  appname: kafka
-  version: 0.0.1
+  appname: ${SERVICENAME}
+  version: ${APP_VERSION}
 
 output.logstash:
   hosts: ["logstash:5044"]
 
 processors:
   - add_host_metadata: ~
-#  - add_docker_metadata: ~ 
-#  - add_kubernetes_metadata: ~
+  - rename:
+      fields:
+        - from: "@message"
+          to: "message"
+        - from: "@level"
+          to: "level"
+      ignore_missing: true
+      fail_on_error: false
