--- a/manifests/cluster-example/kafka3/service.yml
+++ b/manifests/cluster-example/kafka3/service.yml
@@ -21,7 +21,7 @@ spec:
       securityContext:
         fsGroup: 1000
       containers:
-      - image: germanedge-docker.artifactory.new-solutions.com/edge-one/kafka:chtest3
+      - image: germanedge-docker.artifactory.new-solutions.com/edge-one/kafka:develop
         volumeMounts:
         - mountPath: /app/kafka-data
           name: chtest-kafka3-pv
